# ai4devs-session1

./: DESIGN.md  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py  models.py  security.py
backend/tests/: test_auth.py
frontend/src/: App.css  App.jsx  index.css
