[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI JWT Authentication Backend"
authors = ["raraujo-bf"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pyjwt = "^2.8.0"
python-dotenv = "^1.0.0"
pydantic = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
